--- a/src/asset/main.css
+++ b/src/asset/main.css
@@ -10,3 +10,25 @@
   padding-top: 20px;
   padding-bottom: 80px;
 }
+
+.pb-5 {
+  padding-bottom: 50px;
+}
+
+.pt-5 {
+  padding-top: 50px;
+}
+
+.header-jumbotron {
+  font-size: 40px;
+}
+
+.text-card {
+  padding-top: 20px;
+  font-size: 20px;
+  font-weight: 20px;
+}
+
+.card-hover:hover {
+  box-shadow: 2px 2px 2px 2px #888888;
+}
