--- a/src/asset/main.css
+++ b/src/asset/main.css
@@ -1,7 +1,23 @@
-.bg_jumbotron {
-  background-image: url(https://www.dicoding.com/images/original/commons/header.jpg);
+.bg_jumbotron_landing {
+  background-image: url(https://www.caturracommunity.com/images/jumbotron.png);
   background-size: cover;
-  height: 375px;
+  height: 700px;
+}
+
+.text-type-kategori {
+  color: black;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  font-size: 20px;
+}
+
+.text-type-kategori:hover {
+  text-decoration-line: none;
+}
+
+.bg_jumbotron_detail {
+  background-image: url(http://cdn2.tstatic.net/palembang/foto/bank/images/jadi-primadona-setiap-kalangan-benarkah-kopi-bermanfaat-untuk-kesehatan-jantung_20180628_140049.jpg);
+  background-size: cover;
+  height: 500px;
 }
 
 .bg_footer {
@@ -10,7 +26,9 @@
   padding-top: 20px;
   padding-bottom: 80px;
 }
-
+.pb-4 {
+  padding-bottom: 40px;
+}
 .pb-5 {
   padding-bottom: 50px;
 }
@@ -21,6 +39,10 @@
 
 .header-jumbotron {
   font-size: 40px;
+}
+
+.input-jumbotron {
+  width: 100px;
 }
 
 .text-card {
