--- a/src/asset/main.css
+++ b/src/asset/main.css
@@ -9,6 +9,12 @@
   font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
   font-size: 20px;
 }
+.link {
+  color: black;
+}
+.link:hover {
+  text-decoration-line: none;
+}
 
 .text-type-kategori:hover {
   text-decoration-line: none;
