--- a/src/asset/main.css
+++ b/src/asset/main.css
@@ -1,7 +1,7 @@
 .bg_jumbotron_landing {
-  background-image: url(https://www.caturracommunity.com/images/jumbotron.png);
+  background-image: url(https://www.fits.id/images/elements/cat/jumbotron/makanan-minuman-jumbotron.png);
   background-size: cover;
-  height: 700px;
+  height: 300px;
 }
 
 .text-type-kategori {
