--- a/src/asset/main.css
+++ b/src/asset/main.css
@@ -32,11 +32,30 @@
   padding-top: 20px;
   padding-bottom: 80px;
 }
+.pb-3 {
+  padding-bottom: 30px;
+}
 .pb-4 {
   padding-bottom: 40px;
 }
 .pb-5 {
   padding-bottom: 50px;
+}
+.pt-10 {
+  padding-top: 100px;
+}
+.-mgr-3 {
+  margin-right: -30px;
+}
+
+.tb-3 {
+  margin-right: -30px;
+  margin-left: -30px;
+  width: 100%;
+}
+
+.-mgl-3 {
+  margin-left: -30px;
 }
 
 .pt-5 {
