--- a/src/asset/main.css
+++ b/src/asset/main.css
@@ -2,6 +2,7 @@
   background-image: url(https://www.fits.id/images/elements/cat/jumbotron/makanan-minuman-jumbotron.png);
   background-size: cover;
   height: 300px;
+  background-position: fixed;
 }
 
 .text-type-kategori {
@@ -9,6 +10,13 @@
   font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
   font-size: 20px;
 }
+
+.text {
+  color: #7ea90f;
+  font-family: "BalooTamma-Regular";
+  font-weight: 400;
+}
+
 .link {
   color: black;
 }
@@ -24,11 +32,14 @@
   background-image: url(http://cdn2.tstatic.net/palembang/foto/bank/images/jadi-primadona-setiap-kalangan-benarkah-kopi-bermanfaat-untuk-kesehatan-jantung_20180628_140049.jpg);
   background-size: cover;
   height: 500px;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
 }
 
 .bg_footer {
-  color: #fff;
-  background-image: url(https://www.arkademy.com/asset/v4/img/footer.svg);
+  font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
+  color: black;
+  background: #7ea90f url(https://www.arkademy.com/asset/v4/img/footer.svg);
   padding-top: 20px;
   padding-bottom: 80px;
 }
@@ -52,6 +63,11 @@
   margin-right: -30px;
   margin-left: -30px;
   width: 100%;
+}
+
+.carousel-item > img {
+  width: 100%;
+  height: 350px;
 }
 
 .-mgl-3 {
